--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+1
+version: 1.0.2+2
 
 environment:
   sdk: ">=2.18.5 <3.0.0"
@@ -45,6 +45,9 @@ dependencies:
   dot_navigation_bar: ^1.0.1+4
   get: ^4.6.5
   flutter_launcher_icons: "^0.12.0"
+  change_app_package_name: ^1.1.0
+  webview_flutter: ^4.0.6
+  # webview_flutter: ^4.0.6
 
 dev_dependencies:
   flutter_test:
